Blank JsonObject Issued Fixed And BrokerName Added on Ui

--- a/src/main/resources/scorpio/Info/index.html
+++ b/src/main/resources/scorpio/Info/index.html
@@ -3338,6 +3338,7 @@ li.disable {
 																				class="fa fa-minus" aria-hidden="true"></i></a></th>
 																		<th>Ui Update <a class="add-class"><i
 																				class="fa fa-minus" aria-hidden="true"></i></a></th>
+																		<th>Broker Name <a class="add-class"><i class="fa fa-minus" aria-hidden="true"></i></a></th>
 																		<th class="display-none"></th>
 																		<th>Actions</th>
 																	</tr>
