new Scorpio environment

--- a/src/main/resources/scorpio/Info/index.html
+++ b/src/main/resources/scorpio/Info/index.html
@@ -3406,7 +3406,7 @@ li.disable {
 														<div class="col-sm-12">
 															<br>
 															<nav class="pull-right">
-																<ul class="pagination">
+																<!-- <ul class="pagination">
 																	<li><a href="#" aria-label="Previous"> <span
 																			aria-hidden="true">&laquo;</span>
 																	</a></li>
@@ -3416,7 +3416,7 @@ li.disable {
 																	<li><a href="#" aria-label="Next"> <span
 																			aria-hidden="true">&raquo;</span>
 																	</a></li>
-																</ul>
+																</ul> -->
 															</nav>
 														</div>
 													</div>
