Updated Excel Download Url Generater Code

--- a/src/main/resources/scorpio/Information/index.html
+++ b/src/main/resources/scorpio/Information/index.html
@@ -87,7 +87,9 @@ li.disable {
 
 														<!-- <div id="tonnageExcelUrl"></div> -->
 
-													 <a href="#" class="btn btn-info m-0 sm0-btn-custom pull-right" style="margin-right: 15px !important; padding: 2px 5px;" onclick="downloadTonnageExcel();"> <img src="images/excel_icon.png" width="25px"> </a>
+													<!--  <a href="#" class="btn btn-info m-0 sm0-btn-custom pull-right" style="margin-right: 15px !important; padding: 2px 5px;" onclick="downloadTonnageExcel();"> <img src="images/excel_icon.png" width="25px"> </a> -->
+													<a href="https://dev.bizlem.io:8082/scorpioexcel/TonnageData.xls" download class="btn btn-info m-0 sm0-btn-custom pull-right" style="margin-right: 15px !important; padding: 2px 5px;"> <img src="images/excel_icon.png" width="25px"></a>
+													
 													</h4>
 												</div>
 												<div class="col-sm-12">
