changed extra column

--- a/src/main/resources/scorpio/Information/index.html
+++ b/src/main/resources/scorpio/Information/index.html
@@ -1699,6 +1699,8 @@ li.disable {
 																								class="fa fa-minus" aria-hidden="true"></i></a></th>
 																						<th>Report Timestamp <a class="add-class"><i
 																								class="fa fa-minus" aria-hidden="true"></i></a></th>
+																						<th>Extra Column<a class="add-class"><i
+																								class="fa fa-minus" aria-hidden="true"></i></a></th>
 																						<th>Check Email <a class="add-class"><i
 																								class="fa fa-minus" aria-hidden="true"></i></a></th>
 																						<th class="display-none"></th>
